--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,10 @@
     "dev": "node index.js"
   },
   "dependencies": {
+    "axe-core": "^4.11.0",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "axe-core": "^4.11.0",
+    "firebase-admin": "^13.6.0",
     "puppeteer": "^23.0.0"
   }
 }
