--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "dev": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^5.2.1",
+    "@google/generative-ai": "^0.24.1",
     "axe-core": "^4.11.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^23.0.0"
   }
 }
